--- a/package.json
+++ b/package.json
@@ -12,15 +12,23 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@lingui/react": "^3.13.2",
     "framer-motion": "^6",
+    "make-plural": "^7.1.0",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@lingui/cli": "^3.13.2",
+    "@lingui/loader": "^3.13.2",
+    "@lingui/macro": "^3.13.2",
     "@types/node": "17.0.24",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.3"
